@@ -1,6 +1,7 @@
 v0.10.1
 - Fix removing auto-created thumbnails
 - Don't crash on ConnectionError with web providers, but warn
+- Fix error when removing specific or all not-configured artwork from all seasons
 
 v0.10.0 (2017-04-21)
 - Automatically find new artwork for old items only once per day
